Fix view profile and css email service